--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <link rel="stylesheet" href="assets/css/style.css">
-<title>Title</title>
+<title>Soy Candle NYC</title>
 </head>
 <body>
         <!-- Navbar -->
-        
-        <nav class="navbar navbar-expand-lg bg-secondary">
-            <div class="container-fluid ">
+            <nav class="navbar navbar-expand-lg bg-secondary">
+            <div class="container-fluid">
                 <div class="col-3 logo">
-                    <img class="img-fluid" src="./images/bear.jpg" alt="boat in bottle">
+                    <img class="img" style="height: 50px" src="./static/images/bear.jpg" alt="Bear">
                 </div>
                 <a class="navbar-brand link-light-info" href="#">Soy Candle NYC</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -25,31 +24,21 @@
                     <span class="fa fa-bars"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 link-light">
+                    <ul class="navbar-nav me-auto mb-lg-0 link-light">
                         <li class="nav-item">
                             <a class="nav-link active link-light" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link link-light" href="#">About</a>
+                            <a class="nav-link link-light" href="#">Orders</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle link-light" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Products
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Sculptural Candles</a></li>
-                                <li><a class="dropdown-item" href="#">Jar Candles</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Candle Care</a></li>
-                            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link link-light" href="#">Create an Order</a>
                         </li>
                     </ul>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-info" type="submit">Search</button>
+                    <form class="d-flex" role="Login">
+                        <button class="btn btn-outline-info" type="submit">Login</button>
+                        <button class="btn btn-outline-info mx-2" type="submit">Register</button>
+
                     </form>
                 </div>
             </div>
