--- a/view_orders.html
+++ b/view_orders.html
@@ -44,13 +44,14 @@
         </nav>
 
 
-        <nav class="navbar navbar-light bg-light justify-content-center">
+        <nav class="d-flex justify-content-center m-3">
             <form class="form-inline">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <input class="" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
-        </nav>
+          </nav>
 
+          
         <!-- Accordian -->
         <div class="accordion" id="accordionExample">
             <div class="accordion-item">
