--- a/account.html
+++ b/account.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Title</title>
+    <title>Create Your Account</title>
 </head>
 
 <body>
@@ -50,7 +50,7 @@
     <body>
         <main class="container my-4 p-3 border rounded shadow text-center">
             <h3>Create Your Account.</h3>
-            <form class="row needs-validation g-2 p-2">
+            <form class="row needs-validation g-2 p-2   ">
                 <div class="form-floating col-12 col-md-6 pl-0">
                     <input type="text" class="form-control" id="firstname" name="firstname"
                         placeholder="name@example.com" required>
@@ -65,7 +65,7 @@
                     <div class="invalid-feedback">We need your name!</div>
                 </div>
                 <div class="form-floating col-12 pr-0">
-                    <input type="email" class="form-control" id="email" name="email" placeholder="PassWord" required>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Password" required>
                     <label for="email">Email</label>
                     <div class="valid-feedback">Thank you!</div>
                     <div class="invalid-feedback">We need your email!</div>
