--- a/main.html
+++ b/main.html
@@ -52,7 +52,7 @@
   <div class="card" style="width: 1100px; margin: 0 auto; background-color: #fcedef;">
     <div class="row no-gutters">
       <div class="col-md-4">
-        <img src="static/images/leaf.jpg" class="card-img" alt="...">
+        <img src="static/images/leaf.jpg" class="card-img m-3" alt="...">
       </div>
       <div class="col-md-8">
         <div class="card-body" style="background-color: #fcedef;">
