--- a/view_orders.html
+++ b/view_orders.html
@@ -11,38 +11,38 @@
 <title>View Orders</title>
 </head>
 <body>
-        <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg bg-secondary">
-            <div class="container-fluid">
-                <div class="col-3 logo">
-                    <img class="img" style="height: 50px" src="./static/images/bear.jpg" alt="Bear">
-                </div>
-                <a class="navbar-brand link-light-info" href="#">Soy Candle NYC</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="fa fa-bars"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-lg-0 link-light">
-                        <li class="nav-item">
-                            <a class="nav-link active link-light" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link link-light" href="#">Orders</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link link-light" href="#">Create an Order</a>
-                        </li>
-                    </ul>
-                    <form class="d-flex" role="Login">
-                        <button class="btn btn-outline-info" type="submit">Login</button>
-                        <button class="btn btn-outline-info mx-2" type="submit">Register</button>
-                    </form>
-                </div>
-            </div>
-        </nav>
-
+                <!-- Navbar -->
+                <nav class="navbar navbar-expand-lg bg-secondary">
+                    <div class="container-fluid">
+                        <div class="col-3 logo">
+                            <img class="img" style="height: 50px" src="./static/images/bear.jpg" alt="Bear">
+                        </div>
+                        <a class="navbar-brand link-light-info" href="./index.html">Soy Candle NYC</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="fa fa-bars"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav me-auto mb-lg-0 link-light">
+                                <li class="nav-item">
+                                    <a class="nav-link active link-light" aria-current="page" href="./index.html">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link link-light" href="./view_orders.html">Orders</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link link-light" href="./create_order.html">Create an Order</a>
+                                </li>
+                            </ul>
+                            <form class="d-flex" role="Login">
+                                <a class="btn btn-outline-info" href="./login.html" role="button">Login</a> 
+                                <a class="btn btn-outline-info mx-2" href="account.html" role="button">Register</a>
+                            </form>
+                        </div>
+                    </div>
+                </nav>
+                
 
         <nav class="d-flex justify-content-center m-3">
             <form class="form-inline">
@@ -67,7 +67,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">user@example.com</h5>
                                 <p class="card-text">Quantity: 3 <br>Due Date: 12/15/2025</p>
-                                <a href="#" class="btn btn-primary">View Order</a>
+                                <a href="./main.html" class="btn btn-primary">View Order</a>
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
@@ -75,7 +75,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">user@example.com</h5>
                                 <p class="card-text">Quantity: 3 <br>Due Date: 12/15/2025</p>
-                                <a href="#" class="btn btn-primary">View Order</a>
+                                <a href="./main.html" class="btn btn-primary">View Order</a>
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
@@ -83,7 +83,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">user@example.com</h5>
                                 <p class="card-text">Quantity: 3 <br>Due Date: 12/15/2025</p>
-                                <a href="#" class="btn btn-primary">View Order</a>
+                                <a href="./main.html" class="btn btn-primary">View Order</a>
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
@@ -91,7 +91,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">user@example.com</h5>
                                 <p class="card-text">Quantity: 3 <br>Due Date: 12/15/2025</p>
-                                <a href="#" class="btn btn-primary">View Order</a>
+                                <a href="./main.html" class="btn btn-primary">View Order</a>
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
@@ -99,7 +99,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">user@example.com</h5>
                                 <p class="card-text">Quantity: 3 <br>Due Date: 12/15/2025</p>
-                                <a href="#" class="btn btn-primary">View Order</a>
+                                <a href="./main.html" class="btn btn-primary">View Order</a>
                             </div>
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">user@example.com</h5>
                                 <p class="card-text">Quantity: 3 <br>Due Date: 12/15/2025</p>
-                                <a href="#" class="btn btn-primary">View Order</a>
+                                <a href="./main.html" class="btn btn-primary">View Order</a>
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
@@ -126,7 +126,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">user@example.com</h5>
                                 <p class="card-text">Quantity: 3 <br>Due Date: 12/15/2025</p>
-                                <a href="#" class="btn btn-primary">View Order</a>
+                                <a href="./main.html" class="btn btn-primary">View Order</a>
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
@@ -134,7 +134,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">user@example.com</h5>
                                 <p class="card-text">Quantity: 3 <br>Due Date: 12/15/2025</p>
-                                <a href="#" class="btn btn-primary">View Order</a>
+                                <a href="./main.html" class="btn btn-primary">View Order</a>
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
@@ -142,7 +142,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">user@example.com</h5>
                                 <p class="card-text">Quantity: 3 <br>Due Date: 12/15/2025</p>
-                                <a href="#" class="btn btn-primary">View Order</a>
+                                <a href="./main.html" class="btn btn-primary">View Order</a>
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
@@ -150,7 +150,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">user@example.com</h5>
                                 <p class="card-text">Quantity: 3 <br>Due Date: 12/15/2025</p>
-                                <a href="#" class="btn btn-primary">View Order</a>
+                                <a href="./main.html" class="btn btn-primary">View Order</a>
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
@@ -158,7 +158,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">user@example.com</h5>
                                 <p class="card-text">Quantity: 3 <br>Due Date: 12/15/2025</p>
-                                <a href="#" class="btn btn-primary">View Order</a>
+                                <a href="./main.html" class="btn btn-primary">View Order</a>
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
@@ -166,7 +166,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">user@example.com</h5>
                                 <p class="card-text">Quantity: 3 <br>Due Date: 12/15/2025</p>
-                                <a href="#" class="btn btn-primary">View Order</a>
+                                <a href="./main.html" class="btn btn-primary">View Order</a>
                             </div>
                         </div>
                     </div>
